<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">myCash v.0.0.0 Cashier</string>
    <string name="rnn">RNN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_do_not_have_account">You don\'t have account<b><font color='#6EC531'>  Register</font></b></string>
    <string name="you_have_account">You have an account<b><font color='#6EC531'>  Log In</font></b></string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="try_for_free">Try For Free</string>
    <string name="help">Help</string>
    <string name="forgot_password_desc">To reset your password we first need to verify your identity.</string>
    <string name="email_address">Email address</string>
    <string name="enter_email_address">Enter your email address here</string>
    <string name="next">Next</string>
    <string name="otp_sent_to_phone_number">To maintain the security of your account, a confirmation code has been sent to the phone number %1$s</string>
    <string name="otp_sent_to_your_email">To keep your account secure, a confirmation code has been sent to your email address.</string>
    <string name="otp_expires">This code will expire in &lt;font color="#6EC531"> %1$s &lt;/font>minutes</string>
    <string name="resend">Send Again</string>
    <string name="invalid_confirmation_code">Invalid confirmation code</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm the new password</string>
    <string name="continue_1">Continue</string>
    <string name="set_password">Set password</string>
    <string name="set_password_desc">Enter your new password here and get started with your unique experience with <b>myCash</b></string>
    <string name="successful_operation">Successful operation!</string>
    <string name="change_password_successful_desc">Password changed successfully. Enjoy the experience with <b>myCash</b></string>
    <string name="proceed">Proceed</string>
    <string name="choose_your_account_subscription">Choose your account subscription</string>
    <string name="sar">SAR</string>
    <string name="start_now">Start Now</string>
    <string name="start">Start</string>
    <string name="create_account">Create Account <b>myCash</b></string>
    <string name="have_read_and_agree_to_this">I have read and agree to this</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_content">This text is an example of text that can be replaced in the same space. This text was generated from the Arabic text generator, where you can generate such text or many other texts in addition to increasing the number of characters generated by the application.
If you need a larger number of paragraphs, the Arabic text generator allows you to increase the number of paragraphs as you want, the text will not appear divided and does not contain linguistic errors, the Arabic text generator is useful for web designers in particular, as the customer often needs to see a real picture for website design.
Hence, the designer must put temporary texts on the design to show the client the full form. The role of the Arabic text generator is to save the designer the trouble of searching for alternative text that has nothing to do with the topic that the design is talking about, so it appears inappropriately.</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="payment_method">Payment Method</string>
    <string name="choose_payment_method_with_my_cash">Choose the appropriate payment method with <b>myCash</b></string>
    <string name="pay_tabs">PayTabs</string>
    <string name="phone_number_payment">phone number %1$s</string>
    <string name="payment_info">Payment information</string>
    <string name="name_on_the_card">name on the card</string>
    <string name="full_name">Full name</string>
    <string name="card_number">Card number</string>
    <string name="card_number_hint">1234 – 1234 – 1234 – 1234</string>
    <string name="card_expiry_date">Card expiry date</string>
    <string name="card_expiry_date_hint">MM/YYYY</string>
    <string name="cvv_hint">CVV</string>
    <string name="security_code">Security code</string>
    <string name="pay">Pay %1$s SAR</string>
    <string name="products">Products</string>
    <string name="clients">Clients</string>
    <string name="invoices">Invoices</string>
    <string name="transactions">Expenses</string>
    <string name="reports">Reports</string>
    <string name="top_sheet_behavior" translatable="false">com.codeIn.myCash.utilities.views.TopSheetBehavior</string>
    <string name="search_for_your_product">Search for your product</string>
    <string name="delete_image">delete image</string>
    <string name="product_image" translatable="false">product image</string>
    <string name="mycash_store" translatable="false">mycash Store</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="content_description_log_out_image" translatable="false">log out image</string>
    <string name="content_description_scanner_image" translatable="false">scanner image</string>
    <string name="content_description_settings_image" translatable="false">settings image</string>
    <string name="content_description_filter_image" translatable="false">filter image</string>
    <string name="content_description_calender_image" translatable="false">calender image</string>
    <string name="content_description_add_product_image" translatable="false">add product image</string>
    <string name="content_description_add_client" translatable="false">add client image</string>
    <string name="content_description_options_menu_image" translatable="false">options menu image</string>
    <string name="content_description_decrease_imageview" translatable="false">decrease imageView</string>
    <string name="content_description_increase_imageview" translatable="false">increase_imageView</string>
    <string name="content_description_product_imageview" translatable="false">Product ImageView</string>
    <string name="content_description_back_arrow" translatable="false">Back arrow</string>
    <string name="content_description_reload_image" translatable="false">ReLoad image</string>
    <string name="content_description_new_product_image" translatable="false">new product image</string>
    <string name="content_description_user_image" translatable="false">user image</string>
    <string name="content_description_item_type_image" translatable="false">item type image</string>
    <string name="content_description_device_image" translatable="false">device image</string>
    <string name="view_invoice">View the invoice</string>
    <string name="edit_product">Edit Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="delete_product_desc">Do you want to delete this product from your account?</string>
    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="simplified_tax_invoice_ar" translatable="false">فاتورة ضريبية بسيطة</string>
    <string name="simplified_tax_invoice_en" translatable="false">Simplified Tax invoice</string>
    <string name="invoice_information" translatable="false">Invoice Information</string>
    <string name="invoice_no_en" translatable="false">Invoice No:</string>
    <string name="invoice_no_ar" translatable="false">رقم الفاتورة:</string>
    <string name="content_description_my_cash_logo" translatable="false">my cash logo</string>
    <string name="content_description_qr_code" translatable="false">qr code</string>
    <string name="invoice_issue_date_en" translatable="false">Invoice issue Date:</string>
    <string name="invoice_issue_date_ar" translatable="false">تاريخ الفاتورة:</string>
    <string name="invoice_type_en" translatable="false">Invoice Type:</string>
    <string name="invoice_type_ar" translatable="false">نوع الفاتورة:</string>
    <string name="seller_information" translatable="false">Seller Information</string>
    <string name="seller_name_en" translatable="false">Seller Name:</string>
    <string name="seller_name_ar" translatable="false">اسم المورد:</string>
    <string name="seller_address_en" translatable="false">Seller Address:</string>
    <string name="seller_address_ar" translatable="false">عنوان المورد:</string>
    <string name="seller_vat_no_en" translatable="false">Seller VAT no:</string>
    <string name="seller_vat_no_ar" translatable="false">الرقم الضريبي للمورد:</string>
    <string name="cr_no_en" translatable="false">CR:</string>
    <string name="cr_no_ar" translatable="false">التسجيل التجاري:</string>
    <string name="pdf_sub_text_description_n" translatable="false">Description/\nالوصف</string>
    <string name="pdf_sub_text_unit_price_n" translatable="false">Unit Price/\n سعر الوحدة</string>
    <string name="pdf_sub_text_quantity_n" translatable="false">Quantity/\n الكمية</string>
    <string name="pdf_sub_text_discount_n" translatable="false">Discount/\n الخصم</string>
    <string name="pdf_sub_text_total_before_vat_n" translatable="false">Total before VAT/\n الإجمالي قبل الضريبة</string>
    <string name="pdf_sub_text_vat_n" translatable="false">VAT%/\n نسبة الضريبة</string>
    <string name="pdf_sub_text_vat_amount_n" translatable="false">VAT Amount/\n قيمة الضريبة</string>
    <string name="pdf_sub_text_total_including_vat_n" translatable="false">Total including VAT/\n الإجمالي شامل الضريبة</string>
    <string name="product_details" translatable="false">Product details</string>
    <string name="total_amount_before_vat_en" translatable="false">Total amount before VAT</string>
    <string name="total_amount_before_vat_ar" translatable="false">الإجمالي قبل الضريبة</string>
    <string name="total_vat_en" translatable="false">Total VAT</string>
    <string name="total_vat_ar" translatable="false">الإجمالي ضريبة</string>
    <string name="total_amount_including_vat_en" translatable="false">Total amount including VAT</string>
    <string name="total_amount_including_vat_ar" translatable="false">الإجمالي شامل الضريبة</string>
    <string name="invoice_summary">Invoice Summary</string>
    <string name="client_name">Client name</string>
    <string name="add_client">Add Client</string>
    <string name="client_info">Client information</string>
    <string name="add">Add</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="name">Enter user name</string>
    <string name="notifications">Notifications</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="drafts">Drafts</string>
    <string name="branches">Branches</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out and end shift</string>
    <string name="tax_number">Tax number: %1$s</string>
    <string name="tax_number2">Tax number</string>
    <string name="address">Address</string>
    <string name="_users">Users</string>
    <string name="filter">Filter</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="highest_price">Highest Price</string>
    <string name="recently_added">Recently Added</string>
    <string name="percentage_discount">Percentage Discount</string>
    <string name="price_discount">Price Discount</string>
    <string name="commercial_register">Commercial register</string>
</resources>