<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="horizontal"
    tools:showIn="@layout/pdf_tax_bill">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100"
        android:background="@drawable/bg_pdf_section"
        android:orientation="vertical"
        android:paddingHorizontal="1dp"
        android:paddingBottom="1dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/invoice_summary"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/pdf_table_text"
                android:layout_weight="29"
                android:paddingVertical="11dp"
                android:text="@string/total_amount_before_vat_en" />

            <TextView
                android:id="@+id/total_amount_before_vat_textView"
                style="@style/pdf_table_text"
                android:layout_weight="30"
                android:paddingVertical="11dp"
                android:text="0.0" />

            <TextView
                style="@style/pdf_table_text"
                android:layout_weight="30"
                android:paddingVertical="11dp"
                android:text="@string/total_amount_before_vat_ar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/pdf_table_text"
                android:layout_weight="29"
                android:paddingVertical="11dp"
                android:text="@string/total_vat_en" />

            <TextView
                android:id="@+id/total_vat_textView"
                style="@style/pdf_table_text"
                android:layout_weight="30"
                android:paddingVertical="11dp"
                android:text="0.0" />

            <TextView
                style="@style/pdf_table_text"
                android:layout_weight="30"
                android:paddingVertical="11dp"
                android:text="@string/total_vat_ar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/pdf_table_text"
                android:layout_weight="29"
                android:background="@null"
                android:paddingVertical="11dp"
                android:text="@string/total_amount_including_vat_en" />

            <TextView
                android:id="@+id/total_amount_including_vat_textView"
                style="@style/pdf_table_text"
                android:layout_weight="30"
                android:paddingVertical="11dp"
                android:text="0.0" />

            <TextView
                style="@style/pdf_table_text"
                android:layout_weight="30"
                android:background="@null"
                android:paddingVertical="11dp"
                android:text="@string/total_amount_including_vat_ar" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/qr_code2_imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginStart="52dp"
        android:layout_weight="1"
        android:contentDescription="@string/content_description_qr_code"
        android:padding="9dp"
        android:scaleType="fitXY" />
</LinearLayout>